# xhs

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
alembic/: env.py
alembic/versions/: .gitkeep  20260301_2355_add_menu_preferences.py  20260311_0047_add_user_fields.py  20260312_0131_add_xhs_templates_and_task_fields.py  20260314_0135_add_template_fields.py  20260317_1208_add_bio_to_users.py  20260318_1800_add_search_history.py  20260324_1434_add_auto_renew_to_users.py  20260421_1300_add_composite_indexes_2026_04.py  20260422_2200_add_xhs_template_commercial_fields.py  20260423_1130_add_xhs_template_generation_mode.py  20260424_1300_seed_membership_catalog.py
app/: main.py
app/ai/: __init__.py  config.py  exceptions.py  facade.py  utils.py
app/ai/core/: __init__.py  context.py  token_counter.py
app/ai/prompts/: __init__.py  manager.py  models.py
app/ai/prompts/custom/: .gitkeep
app/ai/providers/: __init__.py  apimart.py  base.py  litellm_provider.py  openai.py
app/ai/schemas/: __init__.py  chat.py  common.py  image.py  prompt_user.py  prompts.py  search.py  summary.py
app/ai/services/: __init__.py  base.py  chat.py  config_sync.py  dynamic_config.py  image.py  summary.py
app/api/: deps.py
app/api/v1/: router.py
app/core/: __init__.py  audit.py  bootstrap.py  context.py  data_io.py  database.py  email.py  exception_handlers.py  exceptions.py  health.py  http_client.py  idempotency.py  image_processor.py  logger.py  metrics.py  rate_limit.py  security.py  security_headers.py  storage.py  tasks.py  timezone.py  token_blacklist.py  transaction.py  utils.py  verify_code.py
app/core/cache/: __init__.py  base.py  decorators.py  facade.py  memory.py  redis_backend.py
app/core/config/: __init__.py  safety_check.py  schema.py  toml_loader.py
app/core/middleware/: __init__.py  _json.py  operation_log.py  request_tracing.py  response_normalization.py
app/core/scheduler/: __init__.py  cron_parser.py  decorators.py  engine.py  models.py
app/crud/: __init__.py  announcement.py  audit_log.py  base.py  base_soft_delete.py  department.py  prompt.py  role.py  search_history.py  user.py  xhs_task.py  xhs_template.py
app/models/: __init__.py  ai.py  announcement.py  audit_log.py  base.py  department.py  membership.py  prompt.py  role.py  search_history.py  user.py  xhs_task.py  xhs_template.py
app/schemas/: __init__.py  ai_admin.py  announcement.py  audit_log.py  credit.py  department.py  response.py  role.py  search_history.py  user.py  validators.py  xhs_task.py
app/services/: __init__.py  auth_service.py  base.py  credit_service.py  user_service.py
app/services/credit/: __init__.py  checkin.py  constants.py  core.py  invite.py  service.py  stats.py  vip.py
app/services/payment_service/: __init__.py  alipay_client.py  keys.py  service.py
config/: settings.prod.toml  settings.toml
docs/: backend_api_checklist.md
scripts/: Remote  _apply_commercial_migration.py  _env.sh  _reset_fake_tavily.py  db_tunnel.bat  generate_template_covers.py  import_medicine_template.py  manage.bat  manage.sh  start.bat  start.sh  verify_migration_2026_04.py
systemd/: fastapi-backend.service
tests/: conftest.py
tests/integration/: conftest.py  test_credits_api.py  test_xhs_tasks_api.py
tests/manual/: README.md  debug_db.py  test_ai_api.py  test_db_connection.py  test_image_xhs.py  test_project_ai.py  test_server.py  test_siliconflow.py  test_siliconflow_direct.py  test_xhs_e2e.py
tests/unit/: test_apimart_helpers.py  test_auth_service.py  test_core.py  test_credit_service.py  test_crud_base.py  test_image_processor_split.py  test_payment_service.py  test_xhs_batch_grid_prompt.py  test_xhs_credit_helpers.py  test_xhs_generation_retry.py  test_xhs_outline_utils.py  test_xhs_task.py
(+80 files in other folders)
